# MemoryBridge

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
docs/: ARCHITECTURE.md  DEVELOPMENT_PLAN.md  INTEGRATION_TEST.md
prompts/: agent-1.md.example
scripts/: build.sh  setup.sh  token_admin.py  token_admin.sh
src/memory_bridge/: __init__.py  config.py  exceptions.py  host_manager.py  logfmt.py  logging.py  main.py
src/memory_bridge/api/: dependencies.py  middleware.py  router.py
src/memory_bridge/core/: context.py  logging.py  memory.py  prompts.py  session.py  session_database.py  token_database.py  tokens.py
src/memory_bridge/models/: __init__.py  request.py  response.py
src/memory_bridge/providers/: base.py  deepseek.py  deepseek_client.py  registry.py
tests/: conftest.py  test_chat_api.py  test_config.py  test_context.py  test_host_manager.py  test_main.py  test_memory.py  test_router.py  test_tokens.py
tests/api/: test_chat_api.py  test_router.py
tests/architecture/: test_imports.py
tests/core/: test_memory.py  test_prompts.py  test_session.py  test_session_database.py  test_tokens.py
tests/integration/: cleanup.py  cleanup.sh  smoke_test.py  smoke_test.sh
tests/providers/: test_provider.py
